force-app/main/default/objects/ChronarPay_App_Config__mdt/ChronarPay_App_Config__mdt.object-meta.xml
<CustomObject>
    <label>ChronarPay App Config</label>
    <pluralLabel>ChronarPay App Configs</pluralLabel>
</CustomObject>