force-app/main/default/objects/ChronarPay_App_Config__mdt/fields/Address_Validation_Options__c.field-meta.xml
<CustomField>
    <fullName>Address_Validation_Options__c</fullName>
    <label>Address Validation Options</label>
    <length>255</length>
    <type>Text</type>
</CustomField>