force-app/main/default/objects/ChronarPay_App_Config__mdt/fields/Allow_Guest_Payment__c.field-meta.xml
<CustomField>
    <fullName>Allow_Guest_Payment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Guest Payment</label>
    <type>Checkbox</type>
</CustomField>