force-app/main/default/objects/ChronarPay_App_Config__mdt/fields/Allow_Registration__c.field-meta.xml
<CustomField>
    <fullName>Allow_Registration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Registration</label>
    <type>Checkbox</type>
</CustomField>