force-app/main/default/objects/ChronarPay_App_Config__mdt/fields/Contact_Us_URL__c.field-meta.xml
<CustomField>
    <fullName>Contact_Us_URL__c</fullName>
    <label>Contact Us URL</label>
    <type>Url</type>
</CustomField>