force-app/main/default/objects/ChronarPay_App_Config__mdt/fields/Copyright_Year__c.field-meta.xml
<CustomField>
    <fullName>Copyright_Year__c</fullName>
    <label>Copyright Year</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>