force-app/main/default/objects/ChronarPay_App_Config__mdt/fields/Enable_Pre_Auth__c.field-meta.xml
<CustomField>
    <fullName>Enable_Pre_Auth__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Pre Auth</label>
    <type>Checkbox</type>
</CustomField>