force-app/main/default/objects/ChronarPay_App_Config__mdt/fields/Is_Account_Linking_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Is_Account_Linking_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Account Linking Enabled</label>
    <type>Checkbox</type>
</CustomField>