force-app/main/default/objects/ChronarPay_App_Config__mdt/fields/Max_Payment_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Max_Payment_Allowed__c</fullName>
    <label>Max Payment Allowed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>