force-app/main/default/objects/ChronarPay_App_Config__mdt/fields/Payment_Integration_Type__c.field-meta.xml
<CustomField>
    <fullName>Payment_Integration_Type__c</fullName>
    <label>Payment Integration Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>