force-app/main/default/objects/ChronarPay_App_Config__mdt/fields/Privacy_Policy_URL__c.field-meta.xml
<CustomField>
    <fullName>Privacy_Policy_URL__c</fullName>
    <label>Privacy Policy URL</label>
    <type>Url</type>
</CustomField>