force-app/main/default/objects/ChronarPay_App_Config__mdt/fields/Terms_Conditions_URL__c.field-meta.xml
<CustomField>
    <fullName>Terms_Conditions_URL__c</fullName>
    <label>Terms &amp; Conditions URL</label>
    <type>Url</type>
</CustomField>